--- a/project.html
+++ b/project.html
@@ -17,8 +17,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <!-- Logo + Title -->
-      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="https://i.pinimg.com/1200x/48/91/e7/4891e767e90dd4c799e8fa908cbf875b.jpg"
+       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <img src="https://i.pinimg.com/1200x/37/9a/da/379adaca19b4774d0a9768ca64ffbe7d.jpg"
           alt="Logo" width="40" height="40" class="rounded-circle">
         <span class="site-title">Portfolio</span>
       </a>
@@ -80,7 +80,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 Portfolio | Designed by Tutty</p>
+    <p>© 2025 Portfolio | Designed by ICS</p>
   </footer>
 
 
