--- a/contact.html
+++ b/contact.html
@@ -22,19 +22,11 @@
     <header class="main-header">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a
-            class="navbar-brand d-flex align-items-center gap-2"
-            href="home.html"
-          >
-            <img
-              src="https://i.pinimg.com/1200x/48/91/e7/4891e767e90dd4c799e8fa908cbf875b.jpg"
-              alt="Logo"
-              width="40"
-              height="40"
-              class="rounded-circle"
-            />
-            <span class="site-title">Portfolio</span>
-          </a>
+           <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+        <img src="https://i.pinimg.com/1200x/37/9a/da/379adaca19b4774d0a9768ca64ffbe7d.jpg"
+          alt="Logo" width="40" height="40" class="rounded-circle">
+        <span class="site-title">Portfolio</span>
+      </a>
 
           <button
             class="navbar-toggler"
